# my_own_notes

./: README.md
cpp_tests/: README.md
cpp_tests/graph/P3/GPrc23_compiletest/: .gitignore  CMakeLists.txt
cpp_tests/graph/P3/GPrc23_compiletest/src/: GPrc23.cpp  graph.cpp
gamehouse_math/class_1/: class1.md
gamehouse_math/class_10/: raycast.md
gamehouse_math/class_11/: data.py  nearest_neighbour.ipynb
gamehouse_math/class_12/: nearest_neighbour.ipynb  notes.md
gamehouse_math/class_13/: percep.ipynb
gamehouse_math/class_14/: MulticlassPeceptron.md
gamehouse_math/class_15/: digit_classiifer.ipynb
gamehouse_math/class_2/: class2.md
gamehouse_math/class_3/: 3_01_gamehouse_skimage_intro.ipynb  class3.md
gamehouse_math/class_4/: 4_gamehouse_convolution_from_scratch.ipynb
gamehouse_math/class_5/: intro_pygame.md
gamehouse_math/class_6/: 01_jump.py  02_draw_ball.py  03_draw_multiple_balls.py  04_ball_move.py  05_bouncing_boundaries.py  06_gravity.py  Untitled.ipynb
gamehouse_math/class_8/: clamp.py
gamehouse_math/class_9/: test_sepaxistheorem.py
graphs/: graph_basics.md
introduction_Cpp/: README.md  cpp_basics.md
introduction_Cpp/0_compile_program/: .#1_print_example_importing_std.cpp  0_print_example.cpp  0_print_example.out  1_print_example_importing_std.cpp  1_print_example_importing_std.out  2_print_string_from_within.cpp  2_print_string_from_within.out
introduction_Cpp/1_variables/: 0_basic_variables.cpp  1_vectors.cpp  2_sizeof_variables.cpp  3_enumerate.cpp  3_enumerate.out  4_iomanip.cpp  4_iomanip.out  6_2D_arrays.cpp  a.out
(+173 files in other folders)
